--- a/src/main/resources/static/admin/css/banHang/banHangTaiQuay.css
+++ b/src/main/resources/static/admin/css/banHang/banHangTaiQuay.css
@@ -66,5 +66,64 @@
 .fa-search {
     font-size: 18px;
 }
+.action-button {
+    background-color: #4CAF50; /* Màu nền */
+    border: none; /* Không viền */
+    color: white; /* Màu chữ */
+    padding: 10px 20px; /* Kích thước lề */
+    text-align: center; /* Căn giữa chữ */
+    text-decoration: none; /* Không gạch chân */
+    display: inline-block; /* Hiển thị dạng inline */
+    font-size: 16px; /* Cỡ chữ */
+    margin: 4px 2px; /* Kích thước lề */
+    cursor: pointer; /* Con trỏ chuột thành kiểu tay */
+}
+
+.action-button:hover {
+    background-color: #45a049; /* Màu nền khi di chuột qua */
+}
+
+.action-button i {
+    margin-right: 5px; /* Khoảng cách giữa biểu tượng và chữ */
+}
+/* Hiển thị modal */
+.modal {
+    display: none; /* Ẩn modal ban đầu */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4); /* Tạo hiệu ứng mờ nền */
+}
+
+/* Hiển thị nội dung modal */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* Đóng modal khi click vào nút đóng */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+
 
 
