--- a/src/main/resources/templates/admin/layouts/index.html
+++ b/src/main/resources/templates/admin/layouts/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,7 @@
     <title>SB Admin 2 - Tables</title>
 
     <!-- Custom fonts for this template -->
-    
+
     <link th:href="@{/admin/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -43,48 +44,46 @@
     <script th:src="@{/admin/imgLibr/themes/fa5/theme.js}" type="text/javascript"></script>
     <script th:src="@{/admin/imgLibr/themes/explorer-fa5/theme.js}" type="text/javascript"></script>
 
-    <link th:href="@{/admin/css/bootstrap-select.min.css}" rel="stylesheet" />
     <title>SB Admin 2 - Dashboard</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.js"
-            integrity="sha512-UOJe4paV6hYWBnS0c9GnIRH8PLm2nFK22uhfAvsTIqd3uwnWsVri1OPn5fJYdLtGY3wB11LGHJ4yPU1WFJeBYQ=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        integrity="sha512-UOJe4paV6hYWBnS0c9GnIRH8PLm2nFK22uhfAvsTIqd3uwnWsVri1OPn5fJYdLtGY3wB11LGHJ4yPU1WFJeBYQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.css"
-          integrity="sha512-qveKnGrvOChbSzAdtSs8p69eoLegyh+1hwOMbmpCViIwj7rn4oJjdmMvWOuyQlTOZgTlZA0N2PXA7iA8/2TUYA=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link th:href="@{/admin/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
+        integrity="sha512-qveKnGrvOChbSzAdtSs8p69eoLegyh+1hwOMbmpCViIwj7rn4oJjdmMvWOuyQlTOZgTlZA0N2PXA7iA8/2TUYA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- <link th:href="@{/admin/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css"> -->
     <link th:href="@{/admin/css/fonts-googleapis.css}">
-    <link th:href="@{/admin/css/sb-admin-2.min.css}" rel="stylesheet">
     <link th:href="@{/admin/css/sweet-alert.min.css}" rel="stylesheet">
     <link th:href="@{/admin/css/khachhang/style.css}" rel="stylesheet">
 </head>
+
 <body id="page-top">
 
     <div id="wrapper">
-		<!-- start sidebar -->
-		<span th:replace="admin/fragments/sidebar :: sidebar"></span>
-		<!-- end side bar -->
-		<div id="content-wrapper" class="d-flex flex-column">
-			<div id="content">
-				<!-- Sidebar Toggle (Topbar) -->
-				<button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-					<i class="fa fa-bars"></i>
-				</button>
-				<!-- start header -->
-				<span th:replace="admin/fragments/header :: header"></span>
-				<!-- end header -->
-				<!-- dynamic content -->
-				<div class="container" layout:fragment="content"></div>
-				<!-- dynamic content -->
-			</div>
-			<!-- footer start -->
-			<span th:replace="admin/fragments/footer :: footer"></span>
-			<!-- footer end -->
-		</div>
-	</div>
-	<a class="scroll-to-top rounded" href="#page-top"> <i class="fas fa-angle-up"></i>
-	</a>
-	
-	<script th:src="@{/admin/js/jquery.min.js}"></script>
+        <!-- start sidebar -->
+        <span th:replace="admin/fragments/sidebar :: sidebar"></span>
+        <!-- end side bar -->
+        <div id="content-wrapper" class="d-flex flex-column">
+            <div id="content">
+                <!-- Sidebar Toggle (Topbar) -->
+                <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <!-- start header -->
+                <span th:replace="admin/fragments/header :: header"></span>
+                <!-- end header -->
+                <!-- dynamic content -->
+                <div class="container" layout:fragment="content"></div>
+                <!-- dynamic content -->
+            </div>
+            <!-- footer start -->
+            <span th:replace="admin/fragments/footer :: footer"></span>
+            <!-- footer end -->
+        </div>
+    </div>
+    <a class="scroll-to-top rounded" href="#page-top"> <i class="fas fa-angle-up"></i>
+    </a>
+
     <script th:src="@{/admin/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
     <script th:src="@{/admin/js/virtual-select.min.js}"></script>
     <script th:src="@{/admin/js/tooltip.min.js}"></script>
@@ -94,19 +93,20 @@
 
 
 
-<script th:src="@{/admin/js/cloudflare-ajax-axios.js}"></script>
-<script th:src="@{/admin/js/call-api-address.js}"></script>
-<script th:src="@{/admin/js/sb-admin-2.min.js}"></script>
-<script th:src="@{/admin/js/product/product.js}"></script>
+    <script th:src="@{/admin/js/cloudflare-ajax-axios.js}"></script>
+    <script th:src="@{/admin/js/call-api-address.js}"></script>
+    <script th:src="@{/admin/js/sb-admin-2.min.js}"></script>
+    <script th:src="@{/admin/js/product/product.js}"></script>
 
-<script th:src="@{/admin/js/jquery.easing.min.js}"></script>
-<script th:src="@{/admin/js/sweet-alert.min.js}"></script>
-<script th:src="@{/admin/js/jquery.validation.min.js}"></script>
-	
-	<script th:src="@{/admin/js/product/product.js}"></script>
+    <script th:src="@{/admin/js/jquery.easing.min.js}"></script>
+    <script th:src="@{/admin/js/sweet-alert.min.js}"></script>
+    <script th:src="@{/admin/js/jquery.validation.min.js}"></script>
+
+    <script th:src="@{/admin/js/product/product.js}"></script>
     <script th:src="@{/admin/js/hoaDon/HoaDon.js}"></script>
-	<script th:src="@{/admin/js/khuyenmai/khuyenmai.js}"></script>
-	<script th:src="@{/admin/js/khachhang/khachHang.js}"></script>
-	<script th:src="@{/admin/js/diachi/diaChi.js}"></script>
+    <script th:src="@{/admin/js/khuyenmai/khuyenmai.js}"></script>
+    <script th:src="@{/admin/js/khachhang/khachHang.js}"></script>
+    <script th:src="@{/admin/js/diachi/diaChi.js}"></script>
 </body>
+
 </html>
