Gio hang chua co security

--- a/src/main/resources/templates/customer/layouts/index.html
+++ b/src/main/resources/templates/customer/layouts/index.html
@@ -51,6 +51,7 @@
         </div>
     </div>
     <script th:src="@{/customer/js/jquery-3.3.1.min.js}"></script>
+    <script th:src="@{/customer/js/jquery.validation.min.js}"></script>
     <script th:src="@{/customer/js/bootstrap.min.js}"></script>
     <script th:src="@{/customer/js/jquery.nice-select.min.js}"></script>
     <script th:src="@{/customer/js/jquery.nicescroll.min.js}"></script>
@@ -60,6 +61,7 @@
     <script th:src="@{/customer/js/mixitup.min.js}"></script>
     <script th:src="@{/customer/js/owl.carousel.min.js}"></script>
     <script th:src="@{/customer/js/main.js}"></script>
+    <script th:src="@{/customer/js/khach-hang/gio-hang.js}"></script>
 </body>
 
 </html>
