--- a/src/main/resources/templates/admin/banHang/banHangTaiQuay/modal.html
+++ b/src/main/resources/templates/admin/banHang/banHangTaiQuay/modal.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{admin/layouts/index}">
+<!doctype html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -10,9 +9,29 @@
 </head>
 <body>
 <div class="container-fluid">
-    <div th:each="sanPhamlist: ${sanPham}">
-        <h1 th:text="${sanPhamlist.tenSanPham}"></h1>
-    </div>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">Hình ảnh</th>
+            <th scope="col">ID</th>
+            <th scope="col">Tên sản phẩm</th>
+            <th scope="col">Giá sản phẩm</th>
+            <th>Thao tác</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr th:each="sanPhamlist: ${sanPham}">
+            <td th:text="${sanPhamlist.getHinhAnhs()}"></td>
+            <td th:text="${sanPhamlist.id}"></td>
+            <td th:text="${sanPhamlist.tenSanPham}"></td>
+            <td th:text="${sanPhamlist.gia}"></td>
+            <td>
+                <h3>Thêm sản phẩm -> Hiển thị ra modal chọn sản phẩm chi tiết</h3>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </body>
 </html>
