--- a/src/main/resources/templates/admin/banHang/banHangTaiQuay/modal.html
+++ b/src/main/resources/templates/admin/banHang/banHangTaiQuay/modal.html
@@ -22,7 +22,7 @@
 
         <tbody>
         <tr th:each="sanPhamlist: ${sanPham}">
-            <td th:text="${sanPhamlist.getHinhAnhs()}"></td>
+            <td th:text="${sanPhamlist.id}"></td>
             <td th:text="${sanPhamlist.id}"></td>
             <td th:text="${sanPhamlist.tenSanPham}"></td>
             <td th:text="${sanPhamlist.gia}"></td>
