--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DaGiao.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DaGiao.html
@@ -70,7 +70,7 @@
     </table>
     <div>
         <ul class="pagination" th:classappend="${pageDaGiao > 0} ? '' : 'pagination-empty'">
-            <li th:each="pageNumber : ${#numbers.sequence(0, pageDaGiao - 1)}">
+            <li th:each="pageNumber : ${#numbers.sequence(1, pageDaGiao)}">
                 <a th:href="@{/admin/DonHang/DaGiaoHang(page=${pageNumber})}" th:text="${pageNumber}"></a>
             </li>
         </ul>
