--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoGiaoHang.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoGiaoHang.html
@@ -126,7 +126,7 @@
     </table>
     <div>
         <ul class="pagination" th:classappend="${pageChoGiaoHang > 0} ? '' : 'pagination-empty'">
-            <li th:each="pageNumber : ${#numbers.sequence(0, pageChoGiaoHang - 1)}">
+            <li th:each="pageNumber : ${#numbers.sequence(1, pageChoGiaoHang)}">
                 <a th:href="@{/admin/DonHang/ChoGiaoHang(page=${pageNumber})}" th:text="${pageNumber}"></a>
             </li>
         </ul>
