--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoXacNhan.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoXacNhan.html
@@ -173,7 +173,7 @@
     </table>
     <div>
         <ul class="pagination" th:classappend="${pageChoXacNhan > 0} ? '' : 'pagination-empty'">
-            <li th:each="pageNumber : ${#numbers.sequence(0, pageChoXacNhan - 1)}">
+            <li th:each="pageNumber : ${#numbers.sequence(1, pageChoXacNhan)}">
                 <a th:href="@{/admin/DonHang/ChoXacNhanDonHang(page=${pageNumber})}" th:text="${pageNumber}"></a>
             </li>
         </ul>
