--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DangGiao.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DangGiao.html
@@ -125,7 +125,7 @@
     </table>
     <div>
         <ul class="pagination" th:classappend="${pageDangGiao > 0} ? '' : 'pagination-empty'">
-            <li th:each="pageNumber : ${#numbers.sequence(0, pageDangGiao - 1)}">
+            <li th:each="pageNumber : ${#numbers.sequence(1, pageDangGiao)}">
                 <a th:href="@{/admin/DonHang/DangGiaoHang(page=${pageNumber})}" th:text="${pageNumber}"></a>
             </li>
         </ul>
