--- a/src/main/resources/templates/admin/layouts/index.html
+++ b/src/main/resources/templates/admin/layouts/index.html
@@ -23,7 +23,7 @@
     <link th:href="@{/admin/css/myCSS.css}" rel="stylesheet">
     <link th:href="@{/admin/css/tooltip.min.css}" rel="stylesheet">
     <link th:href="@{/admin/css/virtual-select.min.css}" rel="stylesheet">
-    <link th:href="@{/admin/css/bootstrap-select.min.css}" rel="stylesheet" />
+    <link th:href="@{/admin/css/bootstrap-select.min.css}" rel="stylesheet"/>
 
     <!-- img Libr -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -32,8 +32,8 @@
           crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
-    <link th:href="@{/admin/imgLibr/css/fileinput.css}" media="all" rel="stylesheet" type="text/css" />
-    <link th:href="@{/admin/imgLibr/themes/explorer-fa5/theme.css}" media="all" rel="stylesheet" type="text/css" />
+    <link th:href="@{/admin/imgLibr/css/fileinput.css}" media="all" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/admin/imgLibr/themes/explorer-fa5/theme.css}" media="all" rel="stylesheet" type="text/css"/>
     <script th:src="@{/admin/imgLibr/js/plugins/buffer.min.js}" type="text/javascript"></script>
     <script th:src="@{/admin/imgLibr/js/plugins/filetype.min.js}" type="text/javascript"></script>
     <script th:src="@{/admin/imgLibr/js/plugins/piexif.js}" type="text/javascript"></script>
@@ -50,7 +50,7 @@
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.css"
           integrity="sha512-qveKnGrvOChbSzAdtSs8p69eoLegyh+1hwOMbmpCViIwj7rn4oJjdmMvWOuyQlTOZgTlZA0N2PXA7iA8/2TUYA=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!-- <link th:href="@{/admin/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css"> -->
     <link th:href="@{/admin/css/fonts-googleapis.css}">
     <link th:href="@{/admin/css/sweet-alert.min.css}" rel="stylesheet">
@@ -100,7 +100,7 @@
 <script th:src="@{/admin/js/jquery.validation.min.js}"></script>
 
 <script th:src="@{/admin/js/product/product.js}"></script>
-<script th:src="@{/admin/js/hoaDon/HoaDon.js}"></script>
+<script th:src="@{/admin/js/hoaDon/TrangThaiHoaDon/tatCaDon.js}"></script>
 <script th:src="@{/admin/js/khuyenmai/khuyenmai.js}"></script>
 <script th:src="@{/admin/js/khachhang/khachHang.js}"></script>
 <script th:src="@{/admin/js/diachi/diaChi.js}"></script>
