--- a/src/main/resources/templates/admin/product/addProduct.html
+++ b/src/main/resources/templates/admin/product/addProduct.html
@@ -615,11 +615,11 @@
                             <div class="float-right">
                                 <a class="btn btn-primary"
                                     onclick="flexUrlSubmit('saveImageProductDetail', 'post', 'AddProduct')">
-                                    <span>Hoàn tất thêm sản phẩm <img th:src="@{/admin/img/icons/save.svg}"
+                                    <span>Hoàn tất thêm ảnh sản phẩm <img th:src="@{/admin/img/icons/save.svg}"
                                             aria-label="chi tiết" /></span></a>
                                 <a class="btn btn-primary"
-                                    onclick="flexUrlSubmit('saveValueImageProduct', 'post', 'AddProduct')">
-                                    <span>Hoàn thành thêm sản phẩm <img th:src="@{/admin/img/icons/save.svg}"
+                                    onclick="flexUrlSubmit('', 'post', 'AddProduct')">
+                                    <span>Quay trở về trang chủ <img th:src="@{/admin/img/icons/save.svg}"
                                             aria-label="chi tiết" /></span></a>
                             </div>
                         </div>
