--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DaGiao.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DaGiao.html
@@ -43,7 +43,7 @@
             <th scope="col">Ngày tạo đơn</th>
             <th scope="col">Tổng tiền</th>
             <th scope="col">Ghi chú</th>
-            <th scope="col">Xem chi tiết</th>
+            <th scope="col">Thao tác</th>
         </tr>
         </thead>
         <tbody>
