--- a/src/main/resources/static/admin/css/hoaDon/TrangThaiHoaDon/daHuy.css
+++ b/src/main/resources/static/admin/css/hoaDon/TrangThaiHoaDon/daHuy.css
@@ -1,6 +1,9 @@
 .fas.fa-history:before {
     content: "\f1da";
 }
+.table tbody tr:hover {
+    background-color: #e2e8f0;
+}
 
 #modalChiTiet .modal-dialog {
     max-width: 1400px;
