--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/TatcaDon.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/TatcaDon.html
@@ -54,13 +54,13 @@
             <th scope="col">Tổng tiền</th>
             <th scope="col">Ghi chú</th>
             <th scope="col">Trạng thái đơn</th>
-            <th scope="col">Xem chi tiết</th>
+            <th scope="col">Thao tác</th>
         </tr>
 
         </thead>
         <tbody>
         <tr th:each="hoaDon : ${getAllHoaDon}">
-            <td class="bs-checkbox"><input data-index="0" name="btSelectItem" type="checkbox"></td>
+            <td></td>
             <th scope="row" th:text="${hoaDon.maDon}"></th>
             <td th:text="${hoaDon.khachHang.hoTen}"></td>
             <td th:text="${hoaDon.sdtNguoiNhan}"></td>
