--- a/src/main/resources/templates/admin/banHang/banHangTaiQuay/BanHang.html
+++ b/src/main/resources/templates/admin/banHang/banHangTaiQuay/BanHang.html
@@ -38,6 +38,24 @@
                 </div>
             </div>
         </div>
+
+        <div class="modal fade" th:id="'modalChiTiet'" tabindex="-1" aria-labelledby="exampleModalLabel-spct"
+             aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel-spct">Chi tiết sản phẩm</h5>
+                    </div>
+                    <div class="modal-body">
+
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <table class="table">
