--- a/src/main/resources/templates/admin/banHang/banHangTaiQuay/modal.html
+++ b/src/main/resources/templates/admin/banHang/banHangTaiQuay/modal.html
@@ -2,30 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-<!--    <script>-->
-<!--        $(document).ready(function () {-->
-<!--            $('#openModalButton').click(function () {-->
-<!--                $.ajax({-->
-<!--                    url: 'api/test.html',-->
-<!--                    dataType: 'html',-->
-<!--                    success: function (response) {-->
-<!--                        $('#modalContent').html(response);-->
-<!--                        $('#modalSanPhamChiTiet').modal('show');-->
-<!--                    },-->
-<!--                    error: function (error) {-->
-<!--                        console.log(error);-->
-<!--                    }-->
-<!--                });-->
-<!--            });-->
-<!--        });-->
 
-<!--    </script>-->
+    <script>
+        $(document).ready(function() {
+            $('.btn-modal').click(function() {
+                var id = $(this).data('id');
+                $('#modalContent').text('ID sản phẩm: ' + id);
+            });
+        });
+    </script>
+
 </head>
 <body>
 <div class="container-fluid">
@@ -47,36 +35,31 @@
             <td th:text="${sanPhamlist.tenSanPham}"></td>
             <td th:text="${sanPhamlist.gia}"></td>
             <td>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModalSPCT">
-                    Chọn
+                <button type="submit" class="btn btn-primary btn-modal" data-toggle="modal" data-target="#modalChiTiet"
+                        data-id="${sanPhamlist.id}">
+                    <i class="fas fa-history"></i>
                 </button>
-
-                <!-- Modal -->
-                <div class="modal fade" id="myModalSPCT" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h4 class="modal-title" id="myModalLabel">Modal Title</h4>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body-spct">
-                                <!-- Nội dung của modal -->
-                                <p>Nội dung modal...</p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-                                <button type="button" class="btn btn-primary">Lưu</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
 
+<div class="modal fade" id="modalChiTiet" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Lịch sử hóa đơn</h5>
+            </div>
+            <div class="modal-body-spct">
+                <!-- Nội dung của modal "modalChiTiet" -->
+                <div id="modalContent"></div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
